deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  labels:
    app.kubernetes.io/name: hello-k8s
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-k8s
  ports:
    - name: http
      port: 80
      targetPort: http
